@@ -1,7 +1,7 @@
 #
 # default grub.cfg, local boot version (placed in linbo cache)
 # thomas@linuxmuster.net
-# 20171106
+# 20200203
 #
 
 set default=0
@@ -46,7 +46,7 @@ if search --set root --file /start.conf; then
 
  #loadfont $prefix/fonts/unicode.pf2
 
- terminal_output console
+ terminal_output gfxterm
  background_image $prefix/linbo_wallpaper.png
 fi
 
@@ -72,7 +72,7 @@ menuentry 'OS localboot' {
   fi
 
   if [ -n "${tmproot}" ]; then
-
+   terminal_output console
    echo Booting operating system ...
    echo
 
