@@ -1,7 +1,7 @@
 #
 # grub.cfg template for host specific grub image
 # thomas@linuxmuster.net
-# 20171107
+# 20200203
 #
 
 set gfxmode=auto
@@ -112,7 +112,7 @@ if [ -n "${reboot_grub}" -a -z "${tmproot}" ]; then
 fi
 
 if [ -n "${tmproot}" ]; then
-
+ terminal_output console
  echo Booting operating system ...
  echo
 
