@@ -1,1 +1,1 @@
-LINBO 2.3.55-0
+LINBO 2.3.56-0
